고객요청사항 수정반영

--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -727,7 +727,7 @@
                                             </colgroup>
                                             <thead>
                                                 <tr>
-                                                    <th scope="col">업력</th>
+                                                    <th scope="col">구분</th>
                                                     <th scope="col">2017</th>
                                                     <th scope="col">2018</th>
                                                     <th scope="col">2019</th>
@@ -737,7 +737,7 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <th scope="row">초기</th>
+                                                    <th scope="row">초기 (3년 이하)</th>
                                                     <td class="agn_r">2,099</td>
                                                     <td class="agn_r">2,955</td>
                                                     <td class="agn_r">1,951</td>
@@ -745,7 +745,7 @@
                                                     <td class="agn_r">959</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">중기</th>
+                                                    <th scope="row">중기 (3년 초과 ~ 7년 이하)</th>
                                                     <td class="agn_r">918</td>
                                                     <td class="agn_r">1,533</td>
                                                     <td class="agn_r">1,913</td>
@@ -753,7 +753,7 @@
                                                     <td class="agn_r">5,159</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">후기</th>
+                                                    <th scope="row">후기 (7년 초과)</th>
                                                     <td class="agn_r">2,433</td>
                                                     <td class="agn_r">2,297</td>
                                                     <td class="agn_r">1,560</td>
@@ -960,7 +960,13 @@
                             </div>
 
                             <div class="tit_box">
-                                <h4><span></span>전체 청산펀드 수익률</h4>
+                                <h4>
+                                    <span></span>전체 청산펀드 수익률
+                                    <div class="q_box">
+                                        <button class="q_btn">?</button>
+                                        <div class="q_content">각 연도별 청산(말소)된 조합의 수익률(IRR)</div>
+                                    </div>
+                                </h4>
                             </div>
 
                             <div class="investment_performance_box">
@@ -980,40 +986,30 @@
                                                 <col width="60px">
                                                 <col width="60px">
                                                 <col width="60px">
-                                                <col width="60px">
-                                                <col width="60px">
                                             </colgroup>
                                             <thead>
                                                 <tr>
                                                     <th scope="col">구분</th>
-                                                    <th scope="col">2017</th>
-                                                    <th scope="col">2018</th>
-                                                    <th scope="col">2019</th>
-                                                    <th scope="col">2020</th>
-                                                    <th scope="col">2021</th>
+                                                    <th scope="col">상위 25% 수익률</th>
+                                                    <th scope="col">하위 25% 수익률</th>
+                                                    <th scope="col">전체 수익률</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <th scope="row">상위 25% 평균 수익률</th>
-                                                    <td class="agn_r">18.3%</td>
-                                                    <td class="agn_r">18.3%</td>
+                                                    <th scope="row">상위 25% 수익률</th>
                                                     <td class="agn_r">18.3%</td>
                                                     <td class="agn_r">18.3%</td>
                                                     <td class="agn_r">18.3%</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">중위 50% 평균 수익률</th>
-                                                    <td class="agn_r">5.3%</td>
-                                                    <td class="agn_r">5.3%</td>
+                                                    <th scope="row">하위 25% 수익률</th>
                                                     <td class="agn_r">5.3%</td>
                                                     <td class="agn_r">5.3%</td>
                                                     <td class="agn_r">5.3%</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">하위 30% 평균 수익률</th>
-                                                    <td class="agn_r">2.1%</td>
-                                                    <td class="agn_r">2.1%</td>
+                                                    <th scope="row">전체 수익률</th>
                                                     <td class="agn_r">2.1%</td>
                                                     <td class="agn_r">2.1%</td>
                                                     <td class="agn_r">2.1%</td>
@@ -1027,7 +1023,13 @@
                             </div>
 
                             <div class="tit_box">
-                                <h4><span></span>유형별 청산펀드 수익률</h4>
+                                <h4>
+                                    <span></span>유형별 청산펀드 수익률
+                                    <div class="q_box">
+                                        <button class="q_btn">?</button>
+                                        <div class="q_content">해당연도 청산</div>
+                                    </div>
+                                </h4>
                             </div>
 
                             <div class="investment_performance_box">
@@ -1060,40 +1062,30 @@
                                                 <col width="60px">
                                                 <col width="60px">
                                                 <col width="60px">
-                                                <col width="60px">
-                                                <col width="60px">
                                             </colgroup>
                                             <thead>
                                                 <tr>
                                                     <th scope="col">구분</th>
-                                                    <th scope="col">2012</th>
-                                                    <th scope="col">2013</th>
-                                                    <th scope="col">2014</th>
-                                                    <th scope="col">2015</th>
-                                                    <th scope="col">2016</th>
+                                                    <th scope="col">상위 25% 수익률</th>
+                                                    <th scope="col">하위 25% 수익률</th>
+                                                    <th scope="col">전체 수익률</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <th scope="row">상위 25% 평균 수익률</th>
-                                                    <td class="agn_r">18.3%</td>
-                                                    <td class="agn_r">18.3%</td>
+                                                    <th scope="row">상위 25% 수익률</th>
                                                     <td class="agn_r">18.3%</td>
                                                     <td class="agn_r">18.3%</td>
                                                     <td class="agn_r">18.3%</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">중위 50% 평균 수익률</th>
-                                                    <td class="agn_r">5.3%</td>
-                                                    <td class="agn_r">5.3%</td>
+                                                    <th scope="row">하위 25% 수익률</th>
                                                     <td class="agn_r">5.3%</td>
                                                     <td class="agn_r">5.3%</td>
                                                     <td class="agn_r">5.3%</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">하위 30% 평균 수익률</th>
-                                                    <td class="agn_r">2.1%</td>
-                                                    <td class="agn_r">2.1%</td>
+                                                    <th scope="row">전체 수익률</th>
                                                     <td class="agn_r">2.1%</td>
                                                     <td class="agn_r">2.1%</td>
                                                     <td class="agn_r">2.1%</td>
