--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -313,10 +313,16 @@
 
             <!-- 스와이퍼 -->
             <div class="swiper-container">
+                
+                <!-- Add Pagination -->
+                <div class="swiper-pagination sec1_full"></div>
+                <button class="swiper-button-prev sec1_full"></button>
+                <button class="swiper-button-next sec1_full"></button>
+
                 <div class="swiper-wrapper">
 
                     <!-- Slide 1 -->
-                    <div class="swiper-slide">
+                    <div class="swiper-slide first">
                         <div class="slide_wrap first">
                             <div class="img">
                                 <video autoplay muted loop data-autoplay playsinline>
@@ -332,28 +338,42 @@
                                 </div>
                                 <ul class="total">
                                     <li>
-                                        <div class="total_tit"><span>벤처투자조합</span>투자받은 기업 수</div>
+                                        <div class="total_tit">
+                                            <span>벤처투자</span>
+                                            <div class="q_box">
+                                                <button class="q_btn">?</button>
+                                                <div class="q_content">창업투자회사 고유계정 투자 포함</div>
+                                            </div>
+                                            올해 투자받은 기업 수
+                                        </div>
                                         <div class="total_content">
                                             <strong>2,438</strong>
                                             <span>개사</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit"><span>창업기획자</span>투자받은 기업 수</div>
+                                        <div class="total_tit"><span>창업기획자</span>올해 투자받은 기업 수</div>
                                         <div class="total_content">
                                             <strong>4,438</strong>
                                             <span>개사</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit"><span>벤처투자조합</span>투자받은 금액</div>
+                                        <div class="total_tit">
+                                            <span>벤처투자</span>
+                                            <div class="q_box">
+                                                <button class="q_btn">?</button>
+                                                <div class="q_content">창업투자회사 고유계정 투자 포함</div>
+                                            </div>
+                                            올해 투자받은 금액
+                                        </div>
                                         <div class="total_content">
                                             <strong>76,802</strong>
                                             <span>억원</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit"><span>창업기획자</span>투자받은 금액</div>
+                                        <div class="total_tit"><span>창업기획자</span>올해 투자받은 금액</div>
                                         <div class="total_content">
                                             <strong>6,802</strong>
                                             <span>억원</span>
@@ -407,7 +427,7 @@
                     <!-- //Slide 1 -->
 
                     <!-- Slide 2 -->
-                    <div class="swiper-slide">
+                    <div class="swiper-slide second">
                         <div class="slide_wrap second">
                             <div class="img"><img src="../images/bg/bg_main_sec1_10.png" alt=""></div>
                             <div class="inner">
@@ -418,7 +438,14 @@
                                 </div>
                                 <ul class="total">
                                     <li>
-                                        <div class="total_tit"><span>벤처투자조합</span>신규결성 조합수/결성금액</div>
+                                        <div class="total_tit">
+                                            <span>벤처투자조합</span>
+                                            <div class="q_box">
+                                                <button class="q_btn">?</button>
+                                                <div class="q_content">모펀드(펀드 출자목적으로 결성된 펀드) 제외</div>
+                                            </div>
+                                            신규결성 조합수/결성금액
+                                        </div>
                                         <div class="total_content">
                                             <strong>404/92,171</strong>
                                             <span>개/억원</span>
@@ -486,7 +513,7 @@
                     <!-- //Slide 2 -->
 
                     <!-- Slide 3 -->
-                    <div class="swiper-slide">
+                    <div class="swiper-slide third">
                         <div class="slide_wrap third">
                             <div class="img"><img src="../images/bg/bg_main_sec1_11.png" alt=""></div>
                             <div class="inner">
@@ -497,28 +524,28 @@
                                 </div>
                                 <ul class="total">
                                     <li>
-                                        <div class="total_tit">벤처기업 수</div>
+                                        <div class="total_tit">전체 벤처기업 수</div>
                                         <div class="total_content">
                                             <strong>5,192</strong>
                                             <span>개사</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit">코스닥 신규상장기업 수</div>
+                                        <div class="total_tit">중 벤처투자유형 기업 수</div>
                                         <div class="total_content">
                                             <strong>100</strong>
                                             <span>개사</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit">VC투자를 받은 기업수</div>
+                                        <div class="total_tit">올해 코스닥 상장 기업 수</div>
                                         <div class="total_content">
                                             <strong>742(14.3%)</strong>
                                             <span>개사</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit">벤처투자유형 벤처기업수</div>
+                                        <div class="total_tit">중 VC 투자기업 수</div>
                                         <div class="total_content">
                                             <strong>62(62%)</strong>
                                             <span>개사</span>
@@ -565,10 +592,6 @@
                     <!-- //Slide 3 -->
 
                 </div>
-                <!-- Add Pagination -->
-                <div class="swiper-pagination sec1_full"></div>
-                <button class="swiper-button-prev sec1_full"></button>
-                <button class="swiper-button-next sec1_full"></button>
             </div>
             <!-- //스와이퍼 -->
 
