--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -430,7 +430,13 @@
                 </div>
                 
                 <div class="tit_box">
-                    <h4><span></span>벤처조합</h4>
+                    <h4>
+                        <span></span>벤처조합
+                        <div class="q_box">
+                            <button class="q_btn">?</button>
+                            <div class="q_content">최근 분기 기준 운영중인 조합 (말소된 조합 제외)</div>
+                        </div>
+                    </h4>
                 </div>
 
                 <div class="investment_performance_box type_02">
@@ -438,7 +444,7 @@
                     <div class="left">
 
                         <div class="tit_box">
-                            <h5><span></span>벤처조합</h5>
+                            <h5><span></span>벤처투자조합</h5>
                         </div>
 
                         <div class="content_box">
@@ -469,7 +475,7 @@
                     <div class="right">
 
                         <div class="tit_box">
-                            <h5><span></span>개인조합</h5>
+                            <h5><span></span>개인투자조합</h5>
                         </div>
 
                         <div class="content_box">
@@ -580,7 +586,13 @@
 
                 <!-- 신규 투자 실적 -->
                 <div class="tit_box">
-                    <h4><span></span>신규 투자 실적</h4>
+                    <h4>
+                        <span></span>연도별 신규 벤처투자 실적
+                        <div class="q_box">
+                            <button class="q_btn">?</button>
+                            <div class="q_content">벤처투자<br/>‘창업투자회사 고유계정+벤처투자조합’의 투자</div>
+                        </div>
+                    </h4>
                 </div>
                 <div class="performance_box">
                     <div class="chart_group_box">
