--- a/pub_list.html
+++ b/pub_list.html
@@ -160,7 +160,7 @@
                     date:'',
                     mdate:'',
                     con:'완료',
-                    etc:'1. (11/21)마이메뉴 삭제<br/>2. (11/21)비디오 html태그 수정<br/>3. (11/21)추천검색어 목록 수정<br/>4. (11/21)인기검색어 5개로 수정<br/>5. (11/21)전자공시 시간 빼기<br/>6.레이어팝업추가<br/>(11/25)현황/통계 화면 수정<br/>(11/29) 전자공시 테이블에 class추가 및 a링크 추가'
+                    etc:'1. (11/21)마이메뉴 삭제<br/>2. (11/21)비디오 html태그 수정<br/>3. (11/21)추천검색어 목록 수정<br/>4. (11/21)인기검색어 5개로 수정<br/>5. (11/21)전자공시 시간 빼기<br/>6.레이어팝업추가<br/>(11/25)현황/통계 화면 수정<br/>(11/29) 전자공시 테이블에 class추가 및 a링크 추가<br/>(12/29) 물음표버튼 추가 및 오타수정/알림소통 수정'
                 },
                 {
                     division: '',
@@ -536,7 +536,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:'(11/21) 탭 삭제<br/>(11/22) 화살표 제거 <br/>(11/24) 화살표 (모바일)추가'
+                    etc:'(11/21) 탭 삭제<br/>(11/22) 화살표 제거 <br/>(11/24) 화살표 (모바일)추가<br/>(12/29) 물음표버튼 추가 및 오타수정'
                 },
                 {
                     division: '',
@@ -545,7 +545,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:'(11/25) 업종별/지역별에 버튼 추가<br/>(12/21) 업종별 셀렉트박스 추가'
+                    etc:'(11/25) 업종별/지역별에 버튼 추가<br/>(12/21) 업종별 셀렉트박스 추가<br/>(12/29) 물음표버튼 추가 및 오타수정'
                 },
                 {
                     division: '',
