이미지수정

--- a/portal/html/USR-1010-F-DTL.html
+++ b/portal/html/USR-1010-F-DTL.html
@@ -17,13 +17,13 @@
     <script src="../js/common.js"></script>
 
     <!-- favicon -->
-    <link rel="icon" href="../images/favicon/favicon.svg" sizes="16x16"> 
-    <link rel="icon" href="../images/favicon/favicon.svg" sizes="32x32"> 
-    <link rel="icon" href="../images/favicon/favicon.svg" sizes="48x48"> 
-    <link rel="icon" href="../images/favicon/favicon.svg" sizes="64x64"> 
-    <link rel="icon" href="../images/favicon/favicon.svg" sizes="128x128">
-    <link rel="apple-touch-icon" href="../images/favicon/favicon.svg">
-    <link rel="shortcut icon" href="../images/favicon/favicon.svg">
+    <link rel="icon" href="../images/favicon/favicon-16.png" sizes="16x16"> 
+    <link rel="icon" href="../images/favicon/favicon-32.png" sizes="32x32"> 
+    <link rel="icon" href="../images/favicon/favicon-48.png" sizes="48x48"> 
+    <link rel="icon" href="../images/favicon/favicon-64.png" sizes="64x64"> 
+    <link rel="icon" href="../images/favicon/favicon-128.png" sizes="128x128">
+    <link rel="apple-touch-icon" href="../images/favicon/favicon-144.png">
+    <link rel="shortcut icon" href="../images/favicon/favicon-144.png">
     <link rel="icon" href="../images/favicon.ico">
 
 </head>
@@ -72,7 +72,6 @@
                     <li>
                         <a href="javascript:void(0);">투자가이드</a>
                         <ul>
-                            <li><a href="./USR-1100-H-CONTN.html">벤처/개인투자조합 안내 가이드</a></li>
                             <li><a href="./USR-1110-H-CONTN.html">벤처투자 가이드 A to Z</a></li>
                             <li><a href="./USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
                             <li><a href="./USR-02-04-B-LIST.html">벤처투자 FAQ</a></li>
@@ -209,8 +208,7 @@
                 <li>
                     <a href="javascript:void(0);">투자가이드</a>
                     <ul>
-                        <li><a href="./USR-1100-H-CONTN.html">벤처/개인투자조합 안내 가이드</a></li>
-                            <li><a href="./USR-1110-H-CONTN.html">벤처투자 가이드 A to Z</a></li>
+                        <li><a href="./USR-1110-H-CONTN.html">벤처투자 가이드 A to Z</a></li>
                         <li><a href="./USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
                         <li><a href="./USR-02-04-B-LIST.html">벤처투자 FAQ</a></li>
                         <li><a href="./USR-1150-B-LIST.html">용어사전</a></li>
