--- a/portal/html/USR-1311-H-CONTN.html
+++ b/portal/html/USR-1311-H-CONTN.html
@@ -351,7 +351,7 @@
                             <div class="design_bi">
                                 <div class="img_bi"><img src="../images/logo/logo_w.svg" alt="BI 이미지"></div>
                                 <div class="btn_box bg">
-                                    <a href="../images/logo.zip" class="download" download>벤처투자종합포털 BI 다운로드</a>
+                                    <a href="../file/벤처투자종합포털_로고.zip" class="download" download>벤처투자종합포털 BI 다운로드</a>
                                 </div>
                             </div>
                         </div>
