헤더 width 수정 / 마이페이지 설정버튼 수정

--- a/pub_list.html
+++ b/pub_list.html
@@ -863,7 +863,7 @@
                     date:'2022-09-15',
                     mdate:'2022-09-29',
                     con:'완료',
-                    etc:' 탭확인필요'
+                    etc:'20230112 더보기 버튼 삭제'
                 },
                 {
                     division: '',
