고객요청사항 수정

--- a/portal/html/USR-1061-H-CONTN.html
+++ b/portal/html/USR-1061-H-CONTN.html
@@ -443,16 +443,15 @@
                     
                     <div class="content_list_box">
                         <div class="list_item">
-                            <div class="content vc_tel">
-                                <dl>
-                                    <dt>VC구주유통망 업무담당자</dt>
-                                    <dd>벤처투자정보센터 <strong>신재은</strong>대리(T.2-2156-2118)</dd>
-                                </dl>
-                                <dl>
-                                    <dt>VC구주유통망 업무담당자</dt>
-                                    <dd>벤처투자정보센터 <strong>김승관</strong>차장(T.2-2156-2118)</dd>
-                                </dl>
-                            </div>
+                            <dl>
+                                <dt><strong>문의처</strong></dt>
+                                <dd>
+                                    <ul>
+                                        <li>한국벤처캐피탈협회 신재은 대리(T.2-2156-2118)</li>
+                                        <li>한국벤처캐피탈협회 김승관 차장(T.2-2156-2102)</li>
+                                    </ul>
+                                </dd>
+                            </dl>
                         </div>
                     </div>
 
