--- a/portal/html/USR-1110-H-CONTN.html
+++ b/portal/html/USR-1110-H-CONTN.html
@@ -456,6 +456,7 @@
                     </div>
                 </div>
 
+                <!-- 20230113 고객요청으로 주석처리
                 <div class="btn_box_group type_01 atoz">
                     <div class="btn_box">
                         <a href="" class="btn_navy">벤처캐피탈 A to Z</a>
@@ -466,7 +467,7 @@
                     <div class="btn_box">
                         <a href="" class="btn_mint">창업기획자 A to Z</a>
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
