--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -348,7 +348,7 @@
                             <li><a href="" rel="tab_content_02">지역별</a></li>
                             <li><a href="" rel="tab_content_03">업력별</a></li>
                             <li><a href="" rel="tab_content_04">투자유형별</a></li>
-                            <li><a href="" rel="tab_content_05">전문투자자용</a></li>
+                            <li><a href="" rel="tab_content_05">기타</a></li>
                         </ul>
                     </div>
                     <div class="tab_content">
@@ -879,7 +879,13 @@
                         <div class="tab_content_05">
 
                             <div class="tit_box">
-                                <h4><span></span>회수유형</h4>
+                                <h4>
+                                    <span></span>회수유형
+                                    <div class="q_box">
+                                        <button class="q_btn">?</button>
+                                        <div class="q_content">회수원금 기준</div>
+                                    </div>
+                                </h4>
                             </div>
 
                             <div class="investment_performance_box">
@@ -963,7 +969,7 @@
 
                             <div class="tit_box">
                                 <h4>
-                                    <span></span>전체 청산펀드 수익률
+                                    <span></span>청산펀드 수익률
                                     <div class="q_box">
                                         <button class="q_btn">?</button>
                                         <div class="q_content">각 연도별 청산(말소)된 조합의 수익률(IRR)</div>
