--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -361,7 +361,13 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit"><span>창업기획자</span>올해 투자받은 기업 수</div>
+                                        <div class="total_tit">
+                                            <span>창업기획자</span>올해 투자받은 기업 수
+                                            <div class="q_box">
+                                                <button class="q_btn">?</button>
+                                                <div class="q_content">‘창업투자회사 고유계정+벤처투자조합＇의 투자</div>
+                                            </div>
+                                        </div>
                                         <div class="total_content">
                                             <strong>4,438</strong>
                                             <span>개사</span>
@@ -382,7 +388,13 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit"><span>창업기획자</span>올해 투자받은 금액</div>
+                                        <div class="total_tit">
+                                            <span>창업기획자</span>올해 투자받은 금액
+                                            <div class="q_box">
+                                                <button class="q_btn">?</button>
+                                                <div class="q_content">‘창업투자회사 고유계정+벤처투자조합＇의 투자</div>
+                                            </div>
+                                        </div>
                                         <div class="total_content">
                                             <strong>6,802</strong>
                                             <span>억원</span>
@@ -468,7 +480,13 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit"><span>벤처투자조합</span>운영중인 조합수/결성금액</div>
+                                        <div class="total_tit">
+                                            <span>벤처투자조합</span>운영중인 조합수/결성금액
+                                            <div class="q_box">
+                                                <button class="q_btn">?</button>
+                                                <div class="q_content">모펀드(펀드 출자목적으로 결성된 펀드) 제외</div>
+                                            </div>
+                                        </div>
                                         <div class="total_content">
                                             <strong>93/5,312</strong>
                                             <span>개/억원</span>
