--- a/pub_list.html
+++ b/pub_list.html
@@ -160,7 +160,7 @@
                     date:'',
                     mdate:'',
                     con:'완료',
-                    etc:'1. (11/21)마이메뉴 삭제<br/>2. (11/21)비디오 html태그 수정<br/>3. (11/21)추천검색어 목록 수정<br/>4. (11/21)인기검색어 5개로 수정<br/>5. (11/21)전자공시 시간 빼기<br/>6.레이어팝업추가<br/>(11/25)현황/통계 화면 수정<br/>(11/29) 전자공시 테이블에 class추가 및 a링크 추가<br/>(12/29) 물음표버튼 추가 및 오타수정/알림소통 수정<br/>(01/03) 메인 id 텍스트수정<br/>20230112 바로가기메뉴수정/섹션1 투자자화면 링크추가/ 알림/소통 섹션 css수정 및 nodata추가'
+                    etc:'1. (11/21)마이메뉴 삭제<br/>2. (11/21)비디오 html태그 수정<br/>3. (11/21)추천검색어 목록 수정<br/>4. (11/21)인기검색어 5개로 수정<br/>5. (11/21)전자공시 시간 빼기<br/>6.레이어팝업추가<br/>(11/25)현황/통계 화면 수정<br/>(11/29) 전자공시 테이블에 class추가 및 a링크 추가<br/>(12/29) 물음표버튼 추가 및 오타수정/알림소통 수정<br/>(01/03) 메인 id 텍스트수정<br/>20230112 바로가기메뉴수정/섹션1 투자자화면 링크추가/ 알림/소통 섹션 css수정 및 nodata추가<br/>20230113 섹션1 q_box추가'
                 },
                 {
                     division: '',
@@ -405,8 +405,8 @@
                     path:'./portal/html/USR-1061-H-CONTN.html',
                     date:'2022-09-26',
                     mdate:'2022-10-05',
-                    con:'재설계',
-                    etc:''
+                    con:'완료',
+                    etc:'20230113 문의처 수정'
                 },
                 {
                     division: '',
@@ -435,7 +435,7 @@
                     date:'2023-01-12',
                     mdate:'',
                     con:'완료',
-                    etc:''
+                    etc:'20230113 텍스트 수정'
                 },
                 {
                     division: '',
@@ -444,7 +444,7 @@
                     date:'2022-11-22',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'(12/06) 엔젤투자 AtoZ 링크에  파일 다운로드 추가<br/>(12/08) 배경색 추가 및 이미지파일교체'
+                    etc:'(12/06) 엔젤투자 AtoZ 링크에  파일 다운로드 추가<br/>(12/08) 배경색 추가 및 이미지파일교체<br/>20230113 버튼 주석처리'
                 },
                 {
                     division: '',
@@ -545,7 +545,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:'(11/21) 탭 삭제<br/>(11/22) 화살표 제거 <br/>(11/24) 화살표 (모바일)추가<br/>(12/29) 물음표버튼 추가 및 오타수정'
+                    etc:'(11/21) 탭 삭제<br/>(11/22) 화살표 제거 <br/>(11/24) 화살표 (모바일)추가<br/>(12/29) 물음표버튼 추가 및 오타수정<br/>20230113 텍스트 수정<br/> 20230113 창업기획자 투자 현황 q_box 추가'
                 },
                 {
                     division: '',
@@ -554,7 +554,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:'(11/25) 업종별/지역별에 버튼 추가<br/>(12/21) 업종별 셀렉트박스 추가<br/>(12/29) 물음표버튼 추가 및 오타수정<br/>20230112 q_box추가'
+                    etc:'(11/25) 업종별/지역별에 버튼 추가<br/>(12/21) 업종별 셀렉트박스 추가<br/>(12/29) 물음표버튼 추가 및 오타수정<br/>20230112 q_box추가<br/>20230112 기타>회수유형 q_box추가 및 청산펀드 수익률 텍스트수정'
                 },
                 {
                     division: '',
