--- a/portal/html/USR-12511-H-CONTN.html
+++ b/portal/html/USR-12511-H-CONTN.html
@@ -359,6 +359,15 @@
                                 </ul>
                             </dd>
                         </dl>
+                        <dl>
+                            <dt><strong>문의처</strong></dt>
+                            <dd>
+                                <ul>
+                                    <li>한국벤처캐피탈협회 신재은 대리(T.2-2156-2118)</li>
+                                    <li>한국벤처캐피탈협회 김승관 차장(T.2-2156-2102)</li>
+                                </ul>
+                            </dd>
+                        </dl>
                     </div>
                 
                     <div class="btn_box_group type_01 left">
