--- a/pub_list.html
+++ b/pub_list.html
@@ -554,7 +554,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:'(11/25) 업종별/지역별에 버튼 추가<br/>(12/21) 업종별 셀렉트박스 추가<br/>(12/29) 물음표버튼 추가 및 오타수정<br/>20230112 q_box추가<br/>20230112 기타>회수유형 q_box추가 및 청산펀드 수익률 텍스트수정'
+                    etc:'(11/25) 업종별/지역별에 버튼 추가<br/>(12/21) 업종별 셀렉트박스 추가<br/>(12/29) 물음표버튼 추가 및 오타수정<br/>20230112 q_box추가<br/>20230112 기타>회수유형 q_box추가 및 청산펀드 수익률 텍스트수정 및 테이블 col 수정 / class추가'
                 },
                 {
                     division: '',
