--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -546,28 +546,28 @@
                                 <!-- 데이터 -->
                                 <div class="all">
 
-                                    <div class="tbl_investment">
+                                    <div class="tbl_investment wid">
                                         <table>
                                             <caption>차트 정보</caption>
                                             <colgroup>
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
-                                                <col width="*">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
+                                                <col width="90px;">
                                             </colgroup>
                                             <thead>
                                                 <tr>
@@ -594,8 +594,8 @@
                                             <tbody>
                                                 <tr>
                                                     <td class="agn_r">2017</td>
-                                                    <td class="agn_r">2,099</td>
-                                                    <td class="agn_r">918</td>
+                                                    <td class="agn_r">87,036</td>
+                                                    <td class="agn_r">17,0364</td>
                                                     <td class="agn_r">2,433</td>
                                                     <td class="agn_r">1,395</td>
                                                     <td class="agn_r">1,502</td>
@@ -603,7 +603,7 @@
                                                     <td class="agn_r">1,126</td>
                                                     <td class="agn_r">608</td>
                                                     <td class="agn_r">342</td>
-                                                    <td class="agn_r">#####</td>
+                                                    <td class="agn_r">333333333333333333333</td>
                                                     <td class="agn_r">2,433</td>
                                                     <td class="agn_r">1,395</td>
                                                     <td class="agn_r">1,502</td>
