수정사항업데이트

--- a/portal/html/USR-1010-F-DTL.html
+++ b/portal/html/USR-1010-F-DTL.html
@@ -394,7 +394,13 @@
                                 <li>Last Update 2022-07-01</li>
                                 <li>
                                     <div class="btn_box">
-                                        <button class="btn_skyblue shadow dialog-link" data-target="#note_01">IR 자료 요청</button>
+                                        <button class="btn_skyblue shadow dialog-link" data-target="#note_01">정보공개 요청</button>
+                                        <div class="q_box">
+                                            <button class="q_btn">?</button>
+                                            <div class="q_content">투자유치 희망기업 정보가 비공개 되어 있을 경우 ‘정보공개요청‘ 버튼을 클릭하여 기업정보를 볼 수 있게 요청할 수 있습니다.</div>
+                                        </div>
+                                    </div>
+                                    <div class="btn_box">
                                         <button class="btn_blue shadow dialog-link" data-target="#note_02">쪽지 보내기</button>
                                     </div>
                                 </li>
@@ -405,7 +411,7 @@
 
                 <div class="community_main_btn">
                     <div class="btn_box">
-                        <a href="./USR-1010-F-LIST.html" class="btn_arrow_right">투자유치 희망기업 검색 목록으로 이동</a>
+                        <a href="./USR-1010-F-LIST.html" class="btn_blue">목록</a>
                     </div>
                 </div>
 
