--- a/portal/html/USR-1311-H-CONTN.html
+++ b/portal/html/USR-1311-H-CONTN.html
@@ -426,6 +426,16 @@
                         <div class="design_color">
                             <ul>
                                 <li>
+                                    <div class="color_box violet"></div>
+                                    <div class="color_detail">
+                                        <dl>
+                                            <dt>Color / 바이올렛</dt>
+                                            <dd>C 36 M 59 Y 0 K 0</dd>
+                                            <dd>R 214 G 118 B 235</dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                                <li>
                                     <div class="color_box skyblue"></div>
                                     <div class="color_detail">
                                         <dl>
