--- a/pub_list.html
+++ b/pub_list.html
@@ -160,7 +160,7 @@
                     date:'',
                     mdate:'',
                     con:'완료',
-                    etc:'1. (11/21)마이메뉴 삭제<br/>2. (11/21)비디오 html태그 수정<br/>3. (11/21)추천검색어 목록 수정<br/>4. (11/21)인기검색어 5개로 수정<br/>5. (11/21)전자공시 시간 빼기<br/>6.레이어팝업추가<br/>(11/25)현황/통계 화면 수정<br/>(11/29) 전자공시 테이블에 class추가 및 a링크 추가<br/>(12/29) 물음표버튼 추가 및 오타수정/알림소통 수정<br/>(01/03) 메인 id 텍스트수정<br/>20230112 바로가기메뉴수정/섹션1 투자자화면 링크추가/ 알림/소통 섹션 css수정 및 nodata추가<br/>20230113 섹션1 q_box추가'
+                    etc:'1. (11/21)마이메뉴 삭제<br/>2. (11/21)비디오 html태그 수정<br/>3. (11/21)추천검색어 목록 수정<br/>4. (11/21)인기검색어 5개로 수정<br/>5. (11/21)전자공시 시간 빼기<br/>6.레이어팝업추가<br/>(11/25)현황/통계 화면 수정<br/>(11/29) 전자공시 테이블에 class추가 및 a링크 추가<br/>(12/29) 물음표버튼 추가 및 오타수정/알림소통 수정<br/>(01/03) 메인 id 텍스트수정<br/>20230112 바로가기메뉴수정/섹션1 투자자화면 링크추가/ 알림/소통 섹션 css수정 및 nodata추가<br/>20230113 섹션1 q_box추가 / 팝업수정'
                 },
                 {
                     division: '',
@@ -207,7 +207,7 @@
                     date:'2022-08-30',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'(11/22) 검색결과없음 추가<br/>(12/01) 검색조건 이름 추가 -> search_form_box 밑에 search_word 추가<br/>(12/21) 데이터없음 li 추가<br/>(12/21) 초기화버튼 추가'
+                    etc:'(11/22) 검색결과없음 추가<br/>(12/01) 검색조건 이름 추가 -> search_form_box 밑에 search_word 추가<br/>(12/21) 데이터없음 li 추가<br/>(12/21) 초기화버튼 추가<br/>20230113 정보공개요청 버튼 옆 q_box 추가'
                 },
                 {
                     division: '',
@@ -728,7 +728,7 @@
                     date:'2022-11-17',
                     mdate:'',
                     con:'완료',
-                    etc:'(11/21)BI소개 메뉴 따로빼기<br/>20230112 img주소수정'
+                    etc:'(11/21)BI소개 메뉴 따로빼기<br/>20230112 img주소수정<br/>20230113 컬러 내용 추가'
                 },
                 {
                     division: '',
