수정사항 업데이트

--- a/portal/html/USR-1334-F-DASH.html
+++ b/portal/html/USR-1334-F-DASH.html
@@ -384,8 +384,8 @@
                 </div>
 
                 <div class="community_main_btn">
-                    <div class="btn_box">
-                        <a href="./USR-1330-F-LIST.html" class="btn_arrow_right">커뮤니티 목록으로 이동</a>
+                    <div class="btn_box type_02">
+                        <a href="./USR-1330-F-LIST.html" class="btn_blue">커뮤니티 목록</a>
                     </div>
                 </div>
                 
