--- a/portal/html/USR-1110-H-CONTN.html
+++ b/portal/html/USR-1110-H-CONTN.html
@@ -374,12 +374,12 @@
                                 <td class="agn_l">General Partner의 약자로 조합의 채무에 대하여 무한책임을 지는 조합원</td>
                             </tr>
                             <tr>
-                                <td>- 창업기획자</td>
+                                <td>창업기획자</td>
                                 <td class="agn_l">초기창업자(사업을 개시한 날부터 3년이 지나지 아니한 자) 등의 선발 및 투자, 전문보육을 주된 업무로 하는 자</td>
                             </tr>
                             <tr>
-                                <td>- 창업투자회사</td>
-                                <td class="agn_l">위험성은 크나 높은 기대수익이 예상되는 사업에 투자하는 자금을 운용하는 역할</td>
+                                <td>창업투자회사</td>
+                                <td class="agn_l">벤처투자를 주된 업무로 하는 회사로 '벤처투자 촉진에 관한 법률'에 따라 등록한 회사</td>
                             </tr>
                             <tr>
                                 <td>유한책임조합원(LP)</td>
@@ -395,7 +395,7 @@
                             </tr>
                             <tr>
                                 <td>수탁은행</td>
-                                <td class="agn_l">조합 출자자 보호를 위하여 벤처투자조합의 재산을 예치받고 투자자산을 보관.관리하는 금융기관</td>
+                                <td class="agn_l">조합 출자자 보호를 위하여 벤처투자조합의 재산을 예치받고 투자자산을 보관·관리하는 금융기관</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">조합 형태</td>
